# 30-day-map-challenge-2025-course

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
day_00/: setup-notes.md
day_01/: main.py  notes.md
day_02/: main.py  notes.md
src/day_01/: notes.md
